<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="action_app_name">ActionModule</string>
    <string name="actions_title">Actions</string>
    <string name="actions_create">Create actions</string>
    <string name="actions_my_works">My works</string>
    <string name="actions_download">Download</string>
    <string name="actions_my_works_title">My works</string>
    <string name="actions_my_works_no_actions">You haven\'t created any actions.</string>
    <string name="actions_my_works_details_title">Details</string>
    <string name="actions_my_works_details_time">Create on</string>
    <string name="actions_my_works_details_des">Description</string>
    <string name="actions_my_works_details_share">Share to the Community</string>
    <string name="actions_my_works_details_play">play</string>
    <string name="actions_my_works_details_loading">Loading...</string>
    <string name="actions_download_title">Download</string>
    <string name="actions_download_no_actions">You haven\'t download any actions.</string>
    <string name="actions_download_details_title">Details</string>
    <string name="actions_download_details_time">Downloaded </string>
    <string name="actions_download_details_des">Description</string>
    <string name="actions_download_details_post">View the related post</string>
    <string name="actions_download_details_play">Play</string>
    <string name="actions_download_details_loading">Loading...</string>
    <string name="actions_download_details_stop">Stop</string>
    <string name="actions_download_details_delete">Are you sure you want to delete the item？</string>
    <string name="actions_courses">How to make?</string>
    <string name="actions_recording">Recording…</string>
     <string name="actions_preview">Preview</string>
    <string name="actions_modify">Modify</string>
    <string name="actions_copy">Copy</string>
    <string name="actions_cut">Cut</string>
    <string name="actions_paste">Paste</string>
    <string name="actions_delete">Delete</string>
    <string name="actions_save_name">Action name</string>
    <string name="actions_save_type">Select action type</string>
    <string name="actions_save_dance">Dance</string>
    <string name="actions_save_sport">Sport</string>
    <string name="actions_save_story">Story</string>
    <string name="actions_save_science">Science</string>
    <string name="actions_save_child">Child</string>
    <string name="actions_save_des">Description</string>
    <string name="actions_saved">Saved</string>
    <string name="actions_saved_tips">You can view it in My works.</string>
    <string name="actions_saved_share">Share to the Community</string>
    <string name="actions_lesson_list">Lesson </string>
    <string name="actions_lesson_more">Coming soon</string>
    <string name="action_next">Next</string>
    <string name="action_level_1">Lesson 1</string>
    <string name="action_level_2">Lesson 2</string>
    <string name="action_level_3">Lesson 3</string>
    <string name="action_level_4">Lesson 4</string>
    <string name="action_level_5">Lesson 5</string>
    <string name="action_level_6">Lesson 6</string>
    <string name="action_level_7">Lesson 7</string>
    <string name="action_level_8">Lesson 8</string>
    <string name="action_level_9">Lesson 9</string>
    <string name="action_level_10">Lesson 10</string>
    <string name="action_level_1_content">第一关 了解动作编辑器</string>
    <string name="action_level_2_content">第二关 学习动作库</string>
    <string name="action_level_3_content">第三关 学习音乐库</string>
    <string name="action_level_4_content">第四关 添加动作+音频</string>
    <string name="action_level_5_content">第五关 创建动作</string>
    <string name="action_level_6_content">第六关 创建音频</string>
    <string name="action_level_7_content">第七关 修改动作</string>
    <string name="action_level_8_content">第八关 连续动作</string>
    <string name="action_level_9_content">第九关 快速创建连续动作</string>
    <string name="action_level_10_content">第十关 自定义动作</string>
     <string name="ui_readback_play" tools:ignore="ResourceName">播放</string>
    <string name="ui_readback_stop" tools:ignore="ResourceName">停止</string>
     <string name="ui_readback_preview_tip" tools:ignore="ResourceName">预览时，机器人动作幅度较大，请将机器人放在开阔平整处，以免摔坏。</string>
     <string name="ui_readback_copy_tip" tools:ignore="ResourceName">动作#已复制</string>
     <string name="ui_readback_paste_tip" tools:ignore="ResourceName">此动作将粘贴在动作#之后</string>
    <string name="ui_readback_action_total_time" tools:ignore="ResourceName">时长#</string>
    <string name="ui_readback_max_time" tools:ignore="ResourceName">最大：</string>
    <string name="ui_readback_min_time" tools:ignore="ResourceName">最小：</string>
     <string name="ui_create_menu_copy_tips" tools:ignore="ResourceName">动作#已复制</string>
    <string name="ui_create_menu_cut_tips" tools:ignore="ResourceName">动作X已剪切</string>
    <string name="ui_create_menu_delete_tips" tools:ignore="ResourceName">动作X已删除</string>
    <string name="ui_create_delete_music" tools:ignore="ResourceName">删除音频</string>
    <string name="ui_create_delete_music_tips" tools:ignore="ResourceName">音频已清除</string>
    <string name="ui_create_select_body" tools:ignore="ResourceName">请在手机上选择机器人要掉节动作的部位</string>
    <string name="ui_create_auto_record" tools:ignore="ResourceName">自动记录动作</string>
    <string name="ui_create_auto_record_tips" tools:ignore="ResourceName">开启自动模式后，机器人的运行轨迹将记录到创作中（每隔200ms），点击“开始”后可以自由调节机器人动作</string>
    <string name="ui_create_guide_add" tools:ignore="ResourceName">调节好动作后，点击这里停止记录</string>
    <string name="ui_create_start" tools:ignore="ResourceName">Start</string>
    <string name="ui_create_basic_action" tools:ignore="ResourceName">基础动作</string>
    <string name="ui_create_add" tools:ignore="ResourceName">添加</string>
    <string name="ui_create_music" tools:ignore="ResourceName">音频</string>
    <string name="ui_create_record" tools:ignore="ResourceName">录音</string>
    <string name="ui_create_cover_music" tools:ignore="ResourceName">创作中已存在音频，确认替换为当前音频么？</string>
    <string name="ui_create_cover_music_tips" tools:ignore="ResourceName">Tips：替换后，音频标记需要重新添加哦~</string>
    <string name="ui_create_save_tips" tools:ignore="ResourceName">动作还未保存，是否退出？</string>
    <string name="ui_basic_action_warrior" tools:ignore="ResourceName">出招</string>
    <string name="ui_basic_action_stoop" tools:ignore="ResourceName">下腰</string>
    <string name="ui_basic_action_squat" tools:ignore="ResourceName">蹲下</string>
    <string name="ui_basic_action_left_hand" tools:ignore="ResourceName">左抬手</string>
    <string name="ui_basic_action_right_hand" tools:ignore="ResourceName">右抬手</string>
    <string name="ui_basic_action_mech_dance1" tools:ignore="ResourceName">机械舞1</string>
    <string name="ui_basic_action_mech_dance2" tools:ignore="ResourceName">机械舞2</string>
    <string name="ui_basic_action_hug" tools:ignore="ResourceName">抱抱</string>
    <string name="ui_basic_action_happy" tools:ignore="ResourceName">开心</string>
    <string name="ui_basic_action_salute" tools:ignore="ResourceName">敬礼</string>
    <string name="ui_advance_action_walk" tools:ignore="ResourceName">行走</string>
    <string name="ui_advance_action_twist" tools:ignore="ResourceName">扭腰</string>
    <string name="ui_advance_action_steppin" tools:ignore="ResourceName">垫脚</string>
    <string name="ui_advance_action_bent" tools:ignore="ResourceName">侧弯腰</string>
    <string name="ui_advance_action_arm" tools:ignore="ResourceName">手臂伸展</string>
    <string name="ui_advance_action_woshou" tools:ignore="ResourceName">握手</string>
    <string name="ui_advance_action_dance1" tools:ignore="ResourceName">舞蹈动作1</string>
    <string name="ui_advance_action_dance2" tools:ignore="ResourceName">舞蹈动作2</string>
    <string name="ui_advance_action_curtain" tools:ignore="ResourceName">谢幕</string>
    <string name="ui_advance_action_bye" tools:ignore="ResourceName">再见</string>
    <string name="ui_create_advance_action" tools:ignore="ResourceName">高级动作</string>
    <string name="ui_create_record_placeholder" tools:ignore="ResourceName">请输入录音名称</string>
    <string name="ui_create_record_empty_name" tools:ignore="ResourceName">录音名称不能为空</string>
    <string name="ui_create_record_save_failed" tools:ignore="ResourceName">保存失败</string>
    <string name="ui_create_click_to_cutoff" tools:ignore="ResourceName">请先点击机器人身体部位掉电</string>
    <string name="ui_create_guide_auto" tools:ignore="ResourceName">点击这里自动记录机器人动作</string>
    <string name="ui_create_holde_robot" tools:ignore="ResourceName">请扶好你的机器人，以免摔倒。</string>
    <string name="ui_readback_index" tools:ignore="ResourceName">动作#</string>
    <string name="action_ui_create_click_robot">请在机器人身上调节你点击的部位</string>
    <string name="action_ui_create_guide_add1">调节好动作后，点击这里添加到创作中</string>
    <string name="action_ui_common_back">返回</string>
    <string name="action_ui_common_cancel">取消</string>
    <string name="action_ui_common_complete">完成</string>
    <string name="action_ui_common_edit">编辑</string>
    <string name="action_ui_common_save">保存</string>
    <string name="action_ui_common_confirm">确定</string>
    <string name="ui_common_add" tools:ignore="ResourceName">add</string>
    <string name="action_ui_bluetooth_hint">提示</string>
    <string name="action_ui_readback_not_null">动作序列不可为空</string>
    <string name="action_ui_readback_quit_tip">当前动作未保存，是否退出？</string>
    <string name="action_ui_readback_quit_continue">继续编辑</string>
    <string name="action_ui_readback_quit_confirm">退出</string>
    <string name="action_ui_readback_save_success">保存动作成功</string>
    <string name="ui_dub_for_actions" tools:ignore="ResourceName">为动作配音</string>
    <string name="ui_dub_start" tools:ignore="ResourceName">开始配音</string>
    <string name="ui_dub_stop" tools:ignore="ResourceName">停止配音</string>
    <string name="ui_dub_restart" tools:ignore="ResourceName">重新配音</string>
    <string name="ui_dub_complete" tools:ignore="ResourceName">配音完成</string>
    <string name="ui_dub" tools:ignore="ResourceName">配音</string>
    <string name="ui_dub_preview" tools:ignore="ResourceName">预览</string>
    <string name="ui_dub_volume" tools:ignore="ResourceName">声音音量</string>
    <string name="ui_dub_discard_message" tools:ignore="ResourceName">确定放弃这段配音么？</string>
    <string name="ui_dub_download_tips" tools:ignore="ResourceName">下载成功，alpha可以为下载和创建的动作配音啦！</string>
    <string name="ui_dub_try" tools:ignore="ResourceName">马上去试试</string>
    <string name="ui_dub_guide" tools:ignore="ResourceName">配音功能在这里</string>
    <string name="ui_dub_change_voice" tools:ignore="ResourceName">变声</string>
    <string name="ui_distribute_start_recording" tools:ignore="ResourceName">开始录制</string>
    <string name="ui_distribute_pause_recording" tools:ignore="ResourceName">暂停录制</string>
    <string name="ui_distribute_resume_recording" tools:ignore="ResourceName">继续录制</string>
    <string name="ui_distribute_record_again" tools:ignore="ResourceName">重新录制</string>
    <string name="ui_remote_finished" tools:ignore="ResourceName">完成</string>
    <string name="action_ui_readback_place_add">添加</string>
    <string name="ui_action_name_error" tools:ignore="ResourceName">名称不能包含特殊字符</string>
    <string name="ui_resave_tip" tools:ignore="ResourceName">当前名称文件已存在，确定覆盖当前文件吗?</string>
    <string name="ui_recording_txt" tools:ignore="ResourceName">动作记录中...</string>
    <string name="ui_readback_save_title" tools:ignore="ResourceName">保存动作</string>
    <string name="ui_readback_save_action_type" tools:ignore="ResourceName">动作类型：</string>
    <string name="ui_readback_save_name_placeholder" tools:ignore="ResourceName">动作名称（不超过16个字符）</string>
    <string name="ui_readback_save_description_placeholder" tools:ignore="ResourceName">动作描述（不超过100个字符）</string>
    <string name="ui_readback_save_tips" tools:ignore="ResourceName">提示：保存后你可以在动作表-我的新建中查看这个动作</string>
    <string name="ui_readback_prompt_empty_name" tools:ignore="ResourceName">动作名不能为空</string>
</resources>